tests/baselines/reference/tsxReactEmit4.errors.txt
tests/cases/conformance/jsx/tsxReactEmit4.tsx(11,5): error TS2304: Cannot find name 'blah'.


==== tests/cases/conformance/jsx/tsxReactEmit4.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
    var p;
    var openClosed1 = <div>
    
       {blah}
        ~~~~
!!! error TS2304: Cannot find name 'blah'.
    
    </div>;
    